--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ function okno_zamknij_David()
 </script>
 </head>
 <body>
-<div style="color:green;font-size:41px;">
+<div style="color:purple;font-size:30px;">
 <script language="JavaScript">
 var a=prompt("Podaj pirwszą liczbę","A=");
 var b=prompt("Podaj drugą liczbę","B=");
